--- a/2_rsdata/src/5_surface_reflectance_pull.Rmd
+++ b/2_rsdata/src/5_surface_reflectance_pull.Rmd
@@ -41,9 +41,13 @@ filesDownR <- drive_ls("watersat/2_rsdata/out/sr_matchups/") %>%
 ```
 
 ```{r Google Earth Engine Pull}
-##repl_python basically starts a python bash window within your R chunk.  This can be used to actually interact with earth engine.
+#Edit .RProfile to set the default python for reticulate
+Sys.setenv(RETICULATE_PYTHON = '/usr/local/bin/python2')
 
+
+##repl_python basically starts a python bash window within your R chunk.  This can be used to actually interact with earth engine.
 repl_python()
+
 import time
 import ee
 import os
@@ -103,7 +107,7 @@ filesUpFlt = [x for x in filesUp if x not in filesDown]
 
 #### Wrap it all up in a for loop running through our list of files
 
-for x in range(0,len(filesUpFlt)):
+for x in range(1,5):#len(filesUpFlt)):
 
   #Read in our file as a feather data frame
   inv = feather.read_dataframe(ULdir + filesUpFlt[x])
@@ -139,6 +143,7 @@ for x in range(0,len(filesUpFlt)):
   maximum_no_of_tasks(15, 60)
   dataOut.start()
 
+print 'done'  
 ## End the python bash.
 exit
 ```
@@ -146,17 +151,17 @@ exit
 ```{r Update Repositories}
   
 #Finally, Download the new data locally and share to team folder.
-filesNew <- drive_ls('WQP_TOA_MatchUps')
+filesNew <- drive_ls('WQP_SR_MatchUps')
 
 for(i in 1:nrow(filesNew)) {
-  path = paste0(getwd(),'/2_rsdata/out/toa_matchups/', filesNew$name[i])
+  path = paste0(getwd(),'/2_rsdata/out/sr_matchups/', filesNew$name[i])
   drive_download(as_id(filesNew$id[i]),
                  path=path, overwrite = TRUE)
 }
 
 for(i in 1:nrow(filesNew)) {
-  file = paste0(getwd(),'/2_rsdata/out/toa_matchups/', filesNew$name[i])
-  drive_upload(file, path = 'watersat/2_rsdata/out/toa_matchups/')
+  file = paste0(getwd(),'/2_rsdata/out/sr_matchups/', filesNew$name[i])
+  drive_upload(file, path = 'watersat/2_rsdata/out/sr_matchups/')
 }
 
 ##Clean up non-team folder so no duplicates end up in it during future pulls
